
New Features

* [GH-19] Port MultiTermQuery
* [GH-21] Activate SirenMultiTermQuery in query parser 
* [GH-20] Extend analyzer for datatype support
* [GH-23] Extend Solr schema for datatype support
* [GH-25] Deploy SIREn on OSS Sonatype Repository

Improvements

* [GH-22] Upgrade to Lucene/Solr 3.4
* [GH-28] Add publication reference to README

Bugs

* [SRN-116] Question mark not correctly escaped in keyword search
* [SRN-117] Phrase Query problem with uri local name

======================= Release 0.2.1 2011-09-13 =======================

Bugs

* [GH-15] siren-core - Fixed POM issue caused by the caliper dependency on gson
* [SRN-25] Counting of matchers in SirenDisjunctionScorer is wrong
* [SRN-79] Make URINormalisationFilter less agressive: token length minimum
           limit is now set to 3.
* [SRN-80] Wrong position increment in LocalnameFilter if no previous tokens
           before final tokens
* [SRN-82] ArrayOutOfBoundException in PackedIntSirenPayload
* [SRN-87] URI normalisation problem in NTripleIndexing demo
* [SRN-90] Keyword parser does not respect default search operator
* [SRN-91] NOT operator is not recognised by the NTriple query parser
* [SRN-92] QnamesFilter cannot have qname http
* [SRN-93] QnamesFilter is restricted to a single token type
* [SRN-97] Default Operator not respected in literal pattern
* [SRN-98] Query Expansion creates invalid query in literal pattern
* [SRN-106] Query expansion does not respect unary operator
* [SRN-111] ResourceGroupQueryProcessor defined two times in processor pipeline

Improvements

* [SRN-3] Extract literal analyzer from the tuple tokenizer
* [SRN-75] Upgraded to lucene/solr 3.1-dev branch
* [SRN-76] Add localname maximum length limit to URILocalnameNormalisation
           filter
* [SRN-77] Create in-memory solr server for unit testing
* [SRN-83] Merge Simple and NTriple query interface into one
* [SRN-84] Add qname support in ntriple query parser