@@ -1,39 +1,0 @@
-<assembly xmlns="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/plugins/maven-assembly-plugin/assembly/1.1.0 http://maven.apache.org/xsd/assembly-1.1.0.xsd">
-  <id>bin</id>
-  <formats>
-    <format>dir</format>
-  </formats>
-  <includeBaseDirectory>false</includeBaseDirectory>
-  <moduleSets>
-    <moduleSet>
-      <includes>
-        <include>org.sindice.siren:siren-core</include>
-      </includes>
-      <binaries>
-        <outputDirectory>modules/siren-core</outputDirectory>
-        <unpack>false</unpack>
-      </binaries>
-    </moduleSet>
-    <moduleSet>
-      <includes>
-        <include>org.sindice.siren:siren-qparser</include>
-      </includes>
-      <binaries>
-        <outputDirectory>modules/siren-qparser</outputDirectory>
-        <unpack>false</unpack>
-      </binaries>
-    </moduleSet>
-    <moduleSet>
-      <includes>
-        <include>org.sindice.siren:siren-solr</include>
-      </includes>
-      <binaries>
-        <outputDirectory>modules/siren-solr</outputDirectory>
-        <unpack>false</unpack>
-      </binaries>
-    </moduleSet>
-  </moduleSets>
-</assembly>
-
