@@ -1,83 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>org.sindice.siren</groupId>
-  <artifactId>siren-parent</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>siren-parent</name>
-  <url>http://siren.sindice.org</url>
-  
-  <developers>
-    <developer>
-      <id>rdelbru</id>
-      <name>Renaud Delbru</name>
-      <email>renaud.delbru::at::deri.org</email>
-      <url>http://renaud.delbru.fr/</url>
-      <organization>DERI Galway</organization>
-      <organizationUrl>http://www.deri.ie/</organizationUrl>
-      <roles>
-        <role>developer</role>
-      </roles>
-    </developer>
-  </developers>
-  
-  <modules>
-    <module>../siren-core</module>
-    <module>../siren-solr</module>
-    <module>../siren-qparser</module>
-  </modules>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	  <lucene.version>3.4.0</lucene.version>
-  </properties>
-  
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <encoding>UTF-8</encoding>
-          <charset>UTF-8</charset>
-        </configuration>
-      </plugin>
-	    <!-- Deploy source jar -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1</version> 
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-  
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
-		
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>0.9.24</version>
-    </dependency>
-		
-  </dependencies>
-
-</project>
